src/snapshots/bminor__parser__test__declaration_statement-23.snap
---
source: src/parser.rs
expression: "parse_statement(\"m: map string integer;\")"
---
Ok(
    VariableDeclaration {
        name: Token {
            kind: Identifier,
            lexeme: "m",
            line: 0,
        },
        variable_type: Map {
            key_kind: String,
            value_kind: Integer,
            initializer: None,
        },
    },
)
