src/snapshots/bminor__parser__test__declaration_statement-25.snap
---
source: src/parser.rs
expression: "parse_statement(\"m: map string integer = {;\")"
---
Err(
    UnexpectedToken(
        "expect expression",
    ),
)
