src/snapshots/bminor__parser__test__declaration_statement-27.snap
---
source: src/parser.rs
expression: "parse_statement(\"m: map string integer = {\\\"key\\\":;\")"
---
Err(
    UnexpectedToken(
        "Token { kind: Semicolon, lexeme: \";\", line: 0 }",
    ),
)
