src/snapshots/bminor__parser__test__declaration_statement-30.snap
---
source: src/parser.rs
expression: "parse_statement(\"fn: function;\")"
---
Err(
    UnexpectedToken(
        "expect return type after 'function'",
    ),
)
