src/snapshots/bminor__parser__test__declaration_statement-31.snap
---
source: src/parser.rs
expression: "parse_statement(\"fn: function void;\")"
---
Err(
    UnexpectedToken(
        "expect '(' after function return type",
    ),
)
