src/snapshots/bminor__parser__test__declaration_statement-32.snap
---
source: src/parser.rs
expression: "parse_statement(\"fn: function char;\")"
---
Err(
    UnexpectedToken(
        "expect '(' after function return type",
    ),
)
