src/snapshots/bminor__parser__test__declaration_statement-33.snap
---
source: src/parser.rs
expression: "parse_statement(\"fn: function integer;\")"
---
Err(
    UnexpectedToken(
        "expect '(' after function return type",
    ),
)
