src/snapshots/bminor__parser__test__declaration_statement-34.snap
---
source: src/parser.rs
expression: "parse_statement(\"fn: function string;\")"
---
Err(
    UnexpectedToken(
        "expect '(' after function return type",
    ),
)
