src/snapshots/bminor__parser__test__declaration_statement-35.snap
---
source: src/parser.rs
expression: "parse_statement(\"fn: function boolean;\")"
---
Err(
    UnexpectedToken(
        "expect '(' after function return type",
    ),
)
