src/snapshots/bminor__parser__test__declaration_statement-36.snap
---
source: src/parser.rs
expression: "parse_statement(\"fn: function boolean()\")"
---
Err(
    UnexpectedToken(
        "expect '=' after param list",
    ),
)
