src/snapshots/bminor__parser__test__declaration_statement-37.snap
---
source: src/parser.rs
expression: "parse_statement(\"fn: function boolean() =\")"
---
Err(
    UnexpectedToken(
        "expect function body",
    ),
)
