src/snapshots/bminor__parser__test__declaration_statement-38.snap
---
source: src/parser.rs
expression: "parse_statement(\"fn: function boolean () = {\")"
---
Err(
    UnexpectedToken(
        "expect expression",
    ),
)
